# otus-cpp-basics

./: .gitignore  README.md
hw02/: CMakeLists.txt  move_me_out.cpp  move_me_out.h
hw03/: CMakeLists.txt  README.md  config.cpp  config.h  guess_the_number.cpp  high_scores.txt  leader_board.cpp  leader_board.h
hw04/include/: add.hpp  div.hpp  mul.hpp  sub.hpp
hw04/src/: parser.cpp
hw05/: CMakeLists.txt  statistics.cpp
hw05/statistics/: isstatistics.h  max.h  mean.h  min.h  std.h
hw06/: CMakeLists.txt  list_test.cc  main.cpp  mylist.h  myvector.h  vector_test.cc
hw08/: CMakeLists.txt  topk_words.cpp
